--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-                        <h1>Dhruvil Dave</h1><br />
+                        <h1>< Dhruvil Dave /></h1><br />
 						 <h2>My Portfolio</h2>
 						<p>Hello, I am a web developer and I have keen interest in competitive programming and problem solving.</p>
                         <button>MY PROJECTS</button><br><br>
