--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
                 <li>
                     <h3>Javascript</h3>
                 </li>
+		 <li>
+                    <h3>React JS</h3>
+                </li>   
+		    
                 <li>
                     <h3>Jquery, JSON</h3>
                 </li>
